# openagents-ai

./: .gitignore  README.md  SPEC.md  pyproject.toml
.specify/memory/: constitution.md
agents/: agent-orchestrator.md  code-reviewer.md  grok-fast-coder.md  sdd-implementation-stage.md  spec-dev-implementation-step.md  spec-dev-orchestrator.md  task-research.md  task-researcher.md
cli/: discovery.py  linker.py  main.py  tui.py
cli/_registry/agents/: grok-fast-coder.md
cli/_registry/agents/drafts/: oracle-agent.md  sdd-orchestrator.md
cli/_registry/commands/: git-commit.md
commands/: deep-research.md  find-issue-to-contribute.md  git-commit.md
config/: opencode.json
scripts/: opencode_agent_linker.py
